<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="16dp"
		android:paddingRight="16dp"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/introNombre"
			android:text="@string/introNombre"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<EditText
			android:id="@+id/nombre"
			android:text="@string/nombre"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<Button
		android:id="@+id/boton"
		android:text="@string/boton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|center"/>
	<TextView
		android:id="@+id/saluda"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:text="pitopitopito"
		android:onClick=""
		android:layout_gravity="bottom"/>
</FrameLayout>