<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/frameLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView
		android:id="@+id/introNombre"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		android:padding="10dp"
		android:text="@string/introNombre"
		android:textAlignment="center"
		android:textSize="21sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.115" />

	<EditText
		android:id="@+id/nombre"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:hint="@string/nombre"
		android:inputType="text"
		android:padding="10dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.497"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/introNombre"
		app:layout_constraintVertical_bias="0.083" />

	<TextView
		android:id="@+id/saludo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="16dp"
		android:text="@string/saludo"
		android:visibility="visible"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/boton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="157dp"
		android:layout_marginEnd="153dp"
		android:text="@string/boton"
		app:layout_constraintBottom_toTopOf="@+id/autor"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/saludo" />
	<TextView
		android:id="@+id/autor"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		android:padding="16dp"
		android:text="@string/autor"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>